--- a/zap/src/main/resources/org/zaproxy/zap/resources/Messages.properties
+++ b/zap/src/main/resources/org/zaproxy/zap/resources/Messages.properties
@@ -213,12 +213,12 @@ api.home.cacert	= <h2>HTTPS Warnings Prevention</h2>\
 <p>To avoid HTTPS Warnings <a href="/OTHER/core/other/rootcert{0}">download</a> and \
 <a href="https://www.zaproxy.org/docs/desktop/ui/dialogs/options/dynsslcert/#install" target="_blank">\
  install CA root Certificate</a> in your Mobile device or computer.</p>
-api.home.proxypac			= <h2>Proxy Configuration</h2>\
+api.home.proxypac			= <h2>\u4EE3\u7406\u914D\u7F6E</h2>\
 <p>To use ZAP effectively it is recommended that you configure your browser to proxy via ZAP.</p><p></p>\
 <p>The easiest way to do this is to launch your browser from ZAP via the "Quick Start / Manual Explore" panel - it will be configured to proxy via ZAP and ignore any certificate warnings.<br>\
 Alternatively you can configure your browser manually or use the generated <a href="/OTHER/core/other/proxy.pac{0}">PAC file</a>.</p>
-api.home.topmsg				= <h1>Welcome to the OWASP Zed Attack Proxy (ZAP)</h1>\
-<p>ZAP is an easy to use integrated penetration testing tool for finding vulnerabilities in web applications.</p><p></p>\
+api.home.topmsg				= <h1\u6B22\u8FCE\u4F60\u6765\u5230SHJZapPro</h1>\
+<p>h1\u6B22\u8FCE\u4F60\u6765\u5230SHJZapPro\u662F\u4E00\u6B3E\u96C6\u6210\u5404\u79CD\u5DE5\u5177\u7684\u6E17\u900F\u6D4B\u8BD5\u6846\u67B6\uFF0C\u7528\u4E8E\u53D1\u73B0WEB\u5E94\u7528\u7A0B\u5E8F\u4E2D\u7684\u6F0F\u6D1E\u3002</p><p></p>\
 <p>Please be aware that you should only attack applications that you have been specifically been given permission to test.</p>
 api.menu.tools.url			= Browse API
 api.options.button.generateKey = Generate Random Key
